# verificatum-vec

./: .macros.m4  .travis.yml  .version.m4  AUTHORS  LICENSE  Makefile.am  Makefile.build  README  README.md  README_DEV  README_DEV.md  a_eq_neg3_generic.c  a_eq_neg3_generic_macros.h  add.c  affj.c  alarm.c  array_alloc.c  array_alloc_init.c  array_clear_free.c  configure.ac  curve_alloc.c  curve_free.c  curve_get_anon.c  curve_get_named.c  dbl.c  done.c  doxygen.cfg  ecp_nistp224_core.c  ecp_nistp224_util.c  ecp_nistp256_core.c  ecp_nistp256_util.c  ecp_nistp521_core.c  ecp_nistp521_util.c  eq.c  extract_GMP_CFLAGS.c  fmul_block_width.c  generic.c  generic_macros.h  jadd_aff.c  jadd_generic_inner.c  (+41 more)
INFO_TO_SATISFY_AL2.0/: NOTICE
